@@ -11,14 +11,14 @@ EBUILD mmm-mode-0.4.7.ebuild 959 RMD160 87d59c0bbcde43fcf86abfad53c7e90abfa02a3a
 MD5 2b5f7f5ae70dc73806c052160c3999b0 mmm-mode-0.4.7.ebuild 959
 RMD160 87d59c0bbcde43fcf86abfad53c7e90abfa02a3a mmm-mode-0.4.7.ebuild 959
 SHA256 1ea95ed06bd136224e76703a315b9a36dc99710f856761769749b63dd7cd7e98 mmm-mode-0.4.7.ebuild 959
-EBUILD mmm-mode-0.4.8-r1.ebuild 924 RMD160 f38708840bd27cdbda44f9b9d119a4bd05baa92e SHA1 0de71616fe256338756515663b4e8d92d91a3bb7 SHA256 4a1074f473950dd42c7aa68da7d7ce99e9e69121619075bcdd0b85d9d55d80b3
-MD5 2425fd8fa6f8bbbc3f4ecec7e77a8de3 mmm-mode-0.4.8-r1.ebuild 924
-RMD160 f38708840bd27cdbda44f9b9d119a4bd05baa92e mmm-mode-0.4.8-r1.ebuild 924
-SHA256 4a1074f473950dd42c7aa68da7d7ce99e9e69121619075bcdd0b85d9d55d80b3 mmm-mode-0.4.8-r1.ebuild 924
-MISC ChangeLog 1349 RMD160 edfdecbf6beb446ddb1acb9ea79c62242e348159 SHA1 07967db98e241bce84fbc1a2526651e4baacd707 SHA256 f70c373d26abc3e64b6936754c436cdb02d39893b7bb8a2debfc716357f13a60
-MD5 ed77a554cade2b462f44d3d0356ebeed ChangeLog 1349
-RMD160 edfdecbf6beb446ddb1acb9ea79c62242e348159 ChangeLog 1349
-SHA256 f70c373d26abc3e64b6936754c436cdb02d39893b7bb8a2debfc716357f13a60 ChangeLog 1349
+EBUILD mmm-mode-0.4.8-r1.ebuild 985 RMD160 c6b7b7dc2a12e80c4a93aa7bc959999d7a74475c SHA1 117ee5e3fdc165cc18e3ec97844a136f730ef307 SHA256 77c6c1d2d2e6c04a87243649ddd3de16950533021a6fd9dccfbcfc5f54e8ef8d
+MD5 e4e83ee1a74f53c637f9763533d330d4 mmm-mode-0.4.8-r1.ebuild 985
+RMD160 c6b7b7dc2a12e80c4a93aa7bc959999d7a74475c mmm-mode-0.4.8-r1.ebuild 985
+SHA256 77c6c1d2d2e6c04a87243649ddd3de16950533021a6fd9dccfbcfc5f54e8ef8d mmm-mode-0.4.8-r1.ebuild 985
+MISC ChangeLog 1484 RMD160 6c08057bdfb24dada299ddb5607154bb7c764712 SHA1 d7e586417d118b52a4ab5e36609874fa7cf70f92 SHA256 823403656a006b3e102dfe23a08545a4c0b34a6811ea6d24afa891b5890b7494
+MD5 fcd866b786fde544d02f318b25ef2e81 ChangeLog 1484
+RMD160 6c08057bdfb24dada299ddb5607154bb7c764712 ChangeLog 1484
+SHA256 823403656a006b3e102dfe23a08545a4c0b34a6811ea6d24afa891b5890b7494 ChangeLog 1484
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -32,7 +32,7 @@ SHA256 caf37da863389e57a0459d7ffd587c97954af6e40bc7d40d1df6a081089edc1b files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFGjCj+NQqtfCuFneMRAlI4AKCWNTn07jRoga4nL8G+znLokMYiQQCfexnB
-F6pN2anY98+/25Z2CfASBUI=
-=CJa7
+iD8DBQFHCWDCOeoy/oIi7uwRAnxOAKCWQocweflEwwc7cc68Zs3x7Yy6HQCdGXw0
+e+q+6Tvd2hL7vFRGZNJnyjM=
+=PELm
 -----END PGP SIGNATURE-----
