@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/mmm-mode
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/mmm-mode/ChangeLog,v 1.10 2007/07/04 23:10:48 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/mmm-mode/ChangeLog,v 1.11 2007/10/07 22:41:57 ulm Exp $
+
+  07 Oct 2007; Ulrich Mueller <ulm@gentoo.org> mmm-mode-0.4.8-r1.ebuild:
+  Add die commands to elisp-install. Don't dodoc INSTALL file.
 
   04 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
   mmm-mode-0.4.8-r1.ebuild:
